# tribev2-easy

./: README.md  pyproject.toml  run_short_demo.py
tests/: test_text_events.py
tribev2/: __init__.py  cli.py  dashboard_app.py  demo_utils.py  easy.py  eventstransforms.py  openai_chat.py  runtime.py  utils.py
tribev2/plotting/: base.py  cortical_pv.py  utils.py
tribev2/studies/: __init__.py
